# vsomeip

examples/: CMakeLists.txt
examples/routingmanagerd/: routingmanagerd.cpp
examples/ssas/: CMakeLists.txt  client-example.cpp  service-example.cpp  vsomeip.json
implementation/endpoints/include/: buffer.hpp  udp_server_endpoint_impl.hpp
implementation/message/include/: message_base_impl.hpp  payload_impl.hpp
implementation/plugin/src/: plugin_manager_impl.cpp
implementation/protocol/src/: assign_client_command.cpp  config_command.cpp
implementation/service_discovery/include/: defines.hpp
